nivasa-macros/tests/trybuild/controller_missing_path.stderr
error: missing `path` in `#[controller]` attribute
 --> tests/trybuild/controller_missing_path.rs:3:1
  |
3 | #[controller({ version: "1" })]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `controller` (in Nightly builds, run with -Z macro-backtrace for more info)
