nivasa-macros/tests/trybuild/controller_missing_path.rs
use nivasa_macros::controller;

#[controller({ version: "1" })]
struct UsersController;

fn main() {}
